Fix app background being cut off (#57)
* Fixes the app background being cut off below the fold.
* Removes the "Loading..." sign while loading.

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/_app-theme.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/_app-theme.scss
@@ -17,7 +17,7 @@
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
 
-  material-docs-app {
+  .docs-app-background {
     background: md-color($background, background);
   }
 
